@@ -1,28 +1,32 @@
 package com.revature.revworkforce.serviceImpl;
 
+import com.revature.revworkforce.dto.NotificationDTO;
+import com.revature.revworkforce.enums.EmployeeStatus;
 import com.revature.revworkforce.enums.NotificationPriority;
 import com.revature.revworkforce.enums.NotificationType;
-import com.revature.revworkforce.exception.ResourceNotFoundException;
 import com.revature.revworkforce.exception.UnauthorizedException;
+import com.revature.revworkforce.model.Announcement;
 import com.revature.revworkforce.model.Employee;
 import com.revature.revworkforce.model.Notification;
 import com.revature.revworkforce.repository.EmployeeRepository;
 import com.revature.revworkforce.repository.NotificationRepository;
 import com.revature.revworkforce.service.impl.NotificationServiceImpl;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -39,136 +43,124 @@ class NotificationServiceImplTest {
 
     private Employee employee;
     private Notification notification;
+    private Announcement announcement;
 
     @BeforeEach
-    void setup() {
+    void setUp() {
+        ReflectionTestUtils.setField(notificationService, "expiryDays", 90);
+        ReflectionTestUtils.setField(notificationService, "maxUnread", 50);
 
         employee = new Employee();
         employee.setEmployeeId("EMP001");
+        employee.setFirstName("John");
+        employee.setLastName("Doe");
 
         notification = new Notification();
         notification.setNotificationId(1L);
         notification.setEmployee(employee);
-        notification.setTitle("Test");
-        notification.setMessage("Test message");
-        notification.setNotificationType(NotificationType.SYSTEM);
-        notification.setPriority(NotificationPriority.NORMAL);
+        notification.setTitle("Test Notification");
         notification.setIsRead('N');
-        notification.setCreatedAt(LocalDateTime.now());
+
+        announcement = new Announcement();
+        announcement.setAnnouncementId(1L);
+        announcement.setTitle("Test Announcement");
+        announcement.setMessage("Ann Message");
     }
 
-    // =========================================================
-    // GET EMPLOYEE NOTIFICATIONS
-    // =========================================================
+    @Test
+    void createAnnouncementForAll_Success() {
+        when(employeeRepository.findByStatusOrderByFirstNameAsc(EmployeeStatus.ACTIVE))
+                .thenReturn(Arrays.asList(employee));
+
+        notificationService.createAnnouncementForAll(announcement);
+
+        verify(notificationRepository).saveAll(anyList());
+    }
 
     @Test
-    void getEmployeeNotifications_ReturnsList() {
+    void createNotification_Success() {
+        when(notificationRepository.countByEmployeeAndIsRead(employee, 'N')).thenReturn(10L);
 
-        when(employeeRepository.findById("EMP001"))
-                .thenReturn(Optional.of(employee));
+        notificationService.createNotification(employee, NotificationType.GOAL, "Title", "Message",
+                NotificationPriority.NORMAL);
 
+        verify(notificationRepository).save(any(Notification.class));
+    }
+
+    @Test
+    void createNotification_MaxUnreadReached() {
+        when(notificationRepository.countByEmployeeAndIsRead(employee, 'N')).thenReturn(100L); // assume maxUnread is 50
+        when(notificationRepository.findByEmployeeAndIsRead(eq(employee), eq('N'), any()))
+                .thenReturn(Arrays.asList(notification));
+
+        notificationService.createNotification(employee, NotificationType.GOAL, "Title", "Message",
+                NotificationPriority.NORMAL);
+
+        verify(notificationRepository).delete(notification);
+        verify(notificationRepository).save(any(Notification.class));
+    }
+
+    @Test
+    void getEmployeeNotifications_Success() {
+        when(employeeRepository.findById("EMP001")).thenReturn(Optional.of(employee));
         when(notificationRepository.findByEmployeeOrderByCreatedAtDesc(employee))
-                .thenReturn(List.of(notification));
+                .thenReturn(Arrays.asList(notification));
 
-        var result = notificationService.getEmployeeNotifications("EMP001");
+        List<NotificationDTO> result = notificationService.getEmployeeNotifications("EMP001");
 
         assertThat(result).hasSize(1);
+        assertThat(result.get(0).getTitle()).isEqualTo("Test Notification");
     }
-
-    // =========================================================
-    // GET UNREAD COUNT
-    // =========================================================
-
-    @Test
-    void getUnreadCount_ReturnsCount() {
-
-        when(employeeRepository.findById("EMP001"))
-                .thenReturn(Optional.of(employee));
-
-        when(notificationRepository.countByEmployeeAndIsRead(employee, 'N'))
-                .thenReturn(3L);
-
-        long count = notificationService.getUnreadCount("EMP001");
-
-        assertThat(count).isEqualTo(3);
-    }
-
-    // =========================================================
-    // MARK AS READ SUCCESS
-    // =========================================================
 
     @Test
     void markAsRead_Success() {
-
-        when(notificationRepository.findById(1L))
-                .thenReturn(Optional.of(notification));
+        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
 
         notificationService.markAsRead(1L, "EMP001");
 
-        verify(notificationRepository).save(notification);
         assertThat(notification.getIsRead()).isEqualTo('Y');
+        verify(notificationRepository).save(notification);
     }
-
-    // =========================================================
-    // MARK AS READ NOT FOUND
-    // =========================================================
 
     @Test
-    void markAsRead_NotFound_ThrowsException() {
+    void markAsRead_Unauthorized() {
+        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
 
-        when(notificationRepository.findById(1L))
-                .thenReturn(Optional.empty());
-
-        assertThatThrownBy(() ->
-                notificationService.markAsRead(1L, "EMP001"))
-                .isInstanceOf(ResourceNotFoundException.class);
+        assertThrows(UnauthorizedException.class, () -> notificationService.markAsRead(1L, "EMP002"));
     }
-
-    // =========================================================
-    // MARK AS READ UNAUTHORIZED
-    // =========================================================
-
-    @Test
-    void markAsRead_Unauthorized_ThrowsException() {
-
-        Employee other = new Employee();
-        other.setEmployeeId("EMP999");
-
-        notification.setEmployee(other);
-
-        when(notificationRepository.findById(1L))
-                .thenReturn(Optional.of(notification));
-
-        assertThatThrownBy(() ->
-                notificationService.markAsRead(1L, "EMP001"))
-                .isInstanceOf(UnauthorizedException.class);
-    }
-
-    // =========================================================
-    // DELETE NOTIFICATION
-    // =========================================================
 
     @Test
     void deleteNotification_Success() {
-
-        when(notificationRepository.findById(1L))
-                .thenReturn(Optional.of(notification));
+        when(notificationRepository.findById(1L)).thenReturn(Optional.of(notification));
 
         notificationService.deleteNotification(1L, "EMP001");
 
         verify(notificationRepository).delete(notification);
     }
 
-    // =========================================================
-    // DELETE EXPIRED NOTIFICATIONS
-    // =========================================================
+    @Test
+    void deleteExpiredNotifications_Success() {
+        notificationService.deleteExpiredNotifications();
+        verify(notificationRepository).deleteExpiredNotifications(any(LocalDateTime.class));
+    }
 
     @Test
-    void deleteExpiredNotifications_CallsRepository() {
+    void getUnreadNotifications_Success() {
+        when(employeeRepository.findById("EMP001")).thenReturn(Optional.of(employee));
+        when(notificationRepository.findByEmployeeAndIsReadOrderByCreatedAtDesc(employee, 'N'))
+                .thenReturn(Arrays.asList(notification));
 
-        notificationService.deleteExpiredNotifications();
+        List<NotificationDTO> result = notificationService.getUnreadNotifications("EMP001");
 
-        verify(notificationRepository)
-                .deleteExpiredNotifications(any(LocalDateTime.class));
+        assertThat(result).hasSize(1);
+    }
+
+    @Test
+    void markAllAsRead_Success() {
+        when(employeeRepository.findById("EMP001")).thenReturn(Optional.of(employee));
+
+        notificationService.markAllAsRead("EMP001");
+
+        verify(notificationRepository).markAllAsRead(eq(employee), any(LocalDateTime.class));
     }
 }
